CHANGES
=======

* add log of version number
* handle clean up of db on kill
* mods to assist debugging

1.0.2
-----

* let git control version number
* enable removal of items from albums on --flush-index
* add --db-path sp db can go on the fastest disk (#13)
* add --db-path sp db can go on the fastest disk

1.01
----

* bugfixes #6 #9
* switch logging to stdout
* remove "root" folder level and fix tests to work with logger
* add python.logging
* adding minor todos after verifying full sync of 100,000 photos against Google Backup and Sync
* fix root id finding
* clean up pycharm inspections
* tidy todos into todo.txt
* final version of readme
* restore build status badges
* update Readme
* resolve auth scope issue
* indexing bug fixes
* restore indexing and duplicate handling using new scheme
* fixed indexing model - now using Drive as master
* rework is\_indexed to index all picasaweb files
* Added documentation on the picasaweb drive integration issue
* No handle file edits in picasa but ONLY after the initial sync :-(
* Cope with drive filename changes on edits
* Added handling of remote photos modifications in drive and picasa
* (re) added update on remote file changes
* update to index\_picasa\_media
* update to index\_picasa\_media
* get coverage module correct
* resturcture project to add coveralls
* attempting to get travis badge fixed again
* master branch build monitoring
* fix setup and update readme
* make media type IntEnum to fix travis
* added test credentials for travis testing
* add travis header to readme
* configure travis
* tests now run against gphotos.sync.test acount
* added travis
* fix tests to match changes to the test data
* Put in fix/check for the issues reported by arkpoah
* added interactive login via broswer
* added setting of modified date on local files to match remote
* fix mocking of AlbumRow in tests
* refactor: add boolean handling of empty DbRow objects
* Windows path fixes
* Added local deletion of removed remote files